# serializer version: 1
# name: test_deblurring
  ImageModelDescriptor(
    architecture=MPRNetArch(
      id='MPRNet',
      name='MPRNet',
    ),
    input_channels=3,
    model_bytes=80508292,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '96nf',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_denoising
  ImageModelDescriptor(
    architecture=MPRNetArch(
      id='MPRNet',
      name='MPRNet',
    ),
    input_channels=3,
    model_bytes=62964100,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '80nf',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_deraining
  ImageModelDescriptor(
    architecture=MPRNetArch(
      id='MPRNet',
      name='MPRNet',
    ),
    input_channels=3,
    model_bytes=14548996,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '40nf',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
